Fixed spacing with texts and fixed the questionnaire.

--- a/styles/style.css
+++ b/styles/style.css
@@ -51,7 +51,6 @@ main{
 	justify-content: center;
 	align-items: center;
 	width: 100%;
-	height: 1000px;
 }
 
 header {
@@ -169,7 +168,7 @@ nav:hover #title{
 }
 
 #main-container{
-	margin-top: 80px;
+	margin-top: 160px;
   padding: 15px 0;
 	width: 680px;
 	border: 8px solid var(--main-container-bg);
@@ -323,35 +322,30 @@ footer{
 	font-family: "Arcade";
 	border-radius: 20px;
 	width: 1000px;
-	text-align: center;
+	text-align: left;
 	box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.125);
 }
 
 #how-to-container h3{
 	color: white;
 	font-size: 40px;
+	text-align: center;
 }
 
-#how-to-container table{
-	color: white;
-	font-size: 20px;
-}
-
-#how-to-container th{
-	margin: 20px;
-	padding: 20px;
-}
 
 #how-to-container ul{
 	color: white;
 	font-size: 14px;
+	margin:0;
+	padding: 0;
 }
 
 #scoring-p {
 	text-align: left;
+	line-height: 25px;
 	color: white;
 	font-size: 14px;
-	width: 700px;
+	width: 600px;
 }
 
 #ff-main-container{
@@ -390,23 +384,16 @@ footer{
 	font-size: 40px;
 }
 
-#funfacts-container table{
-	color: white;
-	font-size: 20px;
-}
-
-#funfacts-container th{
-	margin: 20px;
-	padding: 20px;
-}
 
 #funfacts-container ul{
 	color: white;
 	font-size: 14px;
+	line-height: 25px;
 }
 
-#funfacts-container li{
+#facts li{
 	width: 200px;
+	margin-bottom: 50px;
 }
 
 #facts {
